# fl-studio-mcp

./: .env.example  .gitignore  INSTALL.md  PROJECT_SUMMARY.md  README.md  UV_MIGRATION_SUMMARY.md  pyproject.toml
.claude/: settings.local.json
docs/: PROMPTING_GUIDE.md  QUICK_START.md  WINDOWS_SETUP.md
fl_studio_mcp/: __init__.py  fl_studio_server.py
fl_studio_mcp/api/: __init__.py  channels.py  mixer.py  transport.py
fl_studio_mcp/core/: __init__.py  bridge.py  connection.py  exceptions.py
fl_studio_mcp/models/: __init__.py
fl_studio_mcp/tools/: __init__.py
fl_studio_mcp/utils/: __init__.py  midi.py  validation.py
scripts/: test_connection.py
